--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -1,46 +1,60 @@
-  .card-container {
-      width: 15rem;
-      border-radius: 1rem;
-      box-shadow: 0px 10px 8px #999;
-      display: flex;
-      flex-direction: column;
-      margin: 1.5rem;
-      background-color: white;
-      /* height: 40%; */
-      overflow: hidden;
-      text-overflow: ellipsis;
-      /* white-space: nowrap; */
-    
-    }
-    
-    .card-img {
-      width: 100%;
-      border-radius: 1rem 1rem 0 0;
-    }
-    
-    .card-title {
-      margin: 0.5rem 5%;
-    }
-    
-    .card-description {
-      margin: 0.5rem 5%;
-      overflow: hidden;
-      /* text-overflow: ellipsis; */
-      word-wrap: break-word;
-      /* padding: 20px; */
-    }
-    
-    .card-btn {
-      /* bottom: 10px; */
-      /* left:10px; */
-      position: relative;
-      text-align: center;
-      width: 50%;
-      border-radius: 5px;
-      padding: 0.5rem 1rem;
-      background-color: #2563eb;
-      color: white;
-      text-decoration: none;
-      margin: 0.5rem 0.5rem;
-      align-self: center;
-    }
+.card-container {
+  width: 15rem;
+  border-radius: 1rem;
+  box-shadow: 0px 10px 8px #999;
+  display: flex;
+  flex-direction: column;
+  margin: 1.5rem;
+  background-color: white;
+  /* height: 40%; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* white-space: nowrap; */
+}
+
+.card-img {
+  width: 100%;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.card-title {
+  margin: 0.5rem 5%;
+}
+
+.card-description {
+  margin: 0.5rem 5%;
+  overflow: hidden;
+  /* text-overflow: ellipsis; */
+  word-wrap: break-word;
+  /* padding: 20px; */
+}
+
+.card-btn {
+  /* bottom: 10px; */
+  /* left:10px; */
+  position: relative;
+  text-align: center;
+  width: 50%;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  background-color: #2563eb;
+  color: white;
+  text-decoration: none;
+  margin: 0.5rem 0.5rem;
+  align-self: center;
+}
+
+.card-btn-quit {
+  /* bottom: 10px; */
+  /* left:10px; */
+  position: relative;
+  text-align: center;
+  width: 50%;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  background-color: #e73030;
+  color: white;
+  text-decoration: none;
+  margin: 0.5rem 0.5rem;
+  align-self: center;
+}
