Minor CSS Changes

--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -14,7 +14,11 @@
 
 .card-img {
   width: 100%;
+  height: 200px; /* Set a fixed height */
   border-radius: 1rem 1rem 0 0;
+  object-fit: contain;
+  background-color: #ececec; /* A solid color for smaller images */
+  background-size: auto; /* Ensure the image covers the space */
 }
 
 .card-title {
@@ -26,7 +30,7 @@
   overflow: hidden;
   /* text-overflow: ellipsis; */
   word-wrap: break-word;
-  /* padding: 20px; */
+  padding: 10px 5px;
 }
 
 .card-btn {
@@ -42,6 +46,7 @@
   text-decoration: none;
   margin: 0.5rem 0.5rem;
   align-self: center;
+  margin-bottom: 20px;
 }
 
 .card-btn-quit {
