--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,28 +1,26 @@
-.main{
-    display: flex;
-    margin-top: 100px;
-    flex-direction:column;
-    min-height: 100vh;
-    /* padding-bottom: 15vh; */
-    position: relative;
-    width: 100%;
+.main {
+  display: flex;
+  margin-top: 100px;
+  flex-direction: column;
+  min-height: 100vh;
+  /* padding-bottom: 15vh; */
+  position: relative;
+  width: 100%;
 }
-.main .nav{
-    
-    align-items: center;
-    justify-content: space-between;
-    font-size: 22px;
-    padding: 20px;
-    color: #585858;
-    background : -webkit-linear-gradient(16deg, #4b90ff , #ff5546);
-    
-    /* background-color: #FF8F00; */
-    background-color: #c4c7c5;
-   -webkit-background-clip: text;
-   -webkit-text-fill-color:transparent;
-   font-size: 3.69rem;
-   
+.main .nav {
+  align-items: center;
+  justify-content: space-between;
+  font-size: 22px;
+  padding: 0px 60px;
+  color: #585858;
+  background: -webkit-linear-gradient(16deg, #4b90ff, #ff5546);
+
+  /* background-color: #FF8F00; */
+  background-color: #c4c7c5;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3.69rem;
 }
-.para{
-    font-size: 1.5rem;
+.para {
+  font-size: 1.5rem;
 }
