--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,44 +1,45 @@
-.sidebar{
-    min-height: 100vh;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #AF47D2;
-    z-index: 1000;
+.sidebar {
+  min-height: 100vh;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #af47d2;
+  z-index: 1000;
+  padding: 10px;
 }
 
-.sidebar img{
-    width: 20px;
+.sidebar img {
+  width: 15px;
 }
-.sidebar .menu{
-    display: block;
-    margin-left:10px;
-    cursor: pointer;
-}
-
-.sidebar .new-chat{
-    margin-top: 50px;
-    display: inline-flex;
-    align-items: center;
-    gap:10px;
-    padding: 10px 15px;
-    background-color: #FF8F00;
-    border-radius: 50px;
-    font-size: 14px;
-    color: white;
-    cursor: pointer;
+.sidebar .menu {
+  display: block;
+  margin-left: 10px;
+  cursor: pointer;
 }
 
-.sidebar .bottom{
-    display: flex;
-    flex-direction: column;  
+.sidebar .new-chat {
+  margin-top: 50px;
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  padding: 3px 8px;
+  background-color: #ff8f00;
+  border-radius: 50px;
+  font-size: 10px;
+  color: white;
+  cursor: pointer;
 }
-.sidebar .bottom-item{
-    padding-right: 10px;
-    cursor: pointer;
-    display: inline-flex; /* Use inline-flex for inline-level flex container */
-    align-items: center;
+
+.sidebar .bottom {
+  display: flex;
+  flex-direction: column;
 }
-.activitybox{
-    margin: 4px;
+.sidebar .bottom-item {
+  padding-right: 10px;
+  cursor: pointer;
+  display: inline-flex; /* Use inline-flex for inline-level flex container */
+  align-items: center;
+}
+.activitybox {
+  margin: 4px;
 }
